# codex-skills

./: .gitignore  README.md
.agents/plugins/: marketplace.json
.github/workflows/: validate.yml
plugins/douyin-content-capture/.codex-plugin/: plugin.json
plugins/douyin-content-capture/python-package/: README.md  pyproject.toml
plugins/douyin-content-capture/python-package/src/douyin_capture/: __init__.py  audio_extractor.py  cli.py  doctor.py  downloader.py  pipeline.py  report.py  resolver.py  transcriber.py  utils.py
plugins/douyin-content-capture/python-package/tests/: test_cli.py  test_downloader.py  test_utils.py
plugins/douyin-content-capture/skills/douyin-content-capture/: SKILL.md
plugins/douyin-content-capture/skills/douyin-content-capture/agents/: openai.yaml
plugins/douyin-content-capture/skills/douyin-content-capture/references/: INSTALL.md  OUTPUT.md  TROUBLESHOOTING.md  URLS.md
plugins/douyin-content-capture/skills/douyin-content-capture/scripts/: capture.py  requirements.txt
